Adicionando carrinho de compras funcional

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="logo">NEXUS <span>GAMES</span></div>
         <nav>
             <a href="#">Início</a>
-            <a href="#">PlayStation</a>
-            <a href="#">Xbox</a>
-            <a href="#">PC</a>
+            <a href="#">Games</a>
+            <a href="#">Consoles</a>
+            <a href="#">Peças</a>
         </nav>
         <a href="#" class="botao-login">Login</a>
     </header>
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Nexus Games - Desenvolvido por Você</p>
+        <p>&copy; 2025 Nexus Games - Igor Barboza</p>
     </footer>
 
     <script src="script.js"></script>
