--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <a href="#">Consoles</a>
             <a href="#">Peças</a>
         </nav>
-        <a href="#" class="botao-login">Login</a>
+        
+        <div id="carrinho-container">🛒 <span id="contagem-carrinho">0</span></div>
+
+        <a href="login.html" class="botao-login">Login</a>
     </header>
 
     <section class="hero">
@@ -30,7 +33,8 @@
         
         <div class="grade-jogos">
             <div class="card-jogo">
-                <div class="foto-jogo">🎮</div> <h3>Cyber Adventure 2077</h3>
+                <div class="foto-jogo">🎮</div>
+                <h3>Cyber Adventure 2077</h3>
                 <p class="preco">R$ 199,90</p>
                 <button>Comprar</button>
             </div>
@@ -52,7 +56,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Nexus Games - Igor Barboza</p>
+        <p>&copy; 2025 Nexus Games - Igor C M Barboza</p>
     </footer>
 
     <script src="script.js"></script>
